fix(file-portal-layout): Fix error not showing layout

--- a/src/app/file-portals/components/file-portals-layout/file-portals-layout.component.scss
+++ b/src/app/file-portals/components/file-portals-layout/file-portals-layout.component.scss
@@ -5,9 +5,6 @@
 }
 
 .file-portals-navigation {
-    height: 0;
-}
-.navigated {
     height: 100%;
     position: absolute;
     top: 0;
